        - updated libev, working around a bug in linux 2.4, curing the
          symptom of urxvt not closing its window on shell exit. also
          fixes a problem with urxvt not refreshing.
        - the text blink callback was called even when no blinking
          text was visible.
        - pre-8.4 slipwheeling behaviour has been reinstated, with
          some minor improvements.
        - quite a bit of minor code cleanups and codesize optimisations.

8.7  Sun Nov 25 10:23:49 CET 2007
        - update libev with an important bugfix that would cause crashes
          when closing windows (when using rxvtd, and update is recommended).
        - do not compile in the block builtin graphics with --disable-frills.

8.6  Fri Nov 23 14:10:57 CET 2007
        - upgrade libev to disable kqueue on anything but netbsd as it
          seems to be broken everywhere else w.r.t. ptys.
        - allow for spurious event notifications, as at least epoll and
          especially solaris ports like to lie about them (symptoms:
          urxvt "hangs" until there is some x11 related activity).
        - -keysym command line options are now subjected to xlib parsing.
        - add 'xrm' option analogous to Xt one.

8.5a Wed Nov 21 10:16:33 CET 2007
	- make it compile with --disable-transparency.

8.5  Wed Nov 21 05:19:20 CET 2007
        - expect major portability issues in this release: please test and report.
      	- converted from the veritable io manager event loop to
          the high performance libev (http://software.schmorp.de/pkg/libev).
        - minor tuning to the perl selection (include single words and more quoting chars).
	- fix memory leak in pixmap code.
	- fix a serious bug while setting the XIM destroy callback
          on (typical) 64 bit systems.
	- automove-background functionality re-implemented internaly using :root op in pixmap
	  geometry string. For example: rxvt -pixmap "image.jpg;:root"