@@ -88,7 +88,7 @@ CONFIGURE OPTIONS
         Use the given name as default application name when reading
         resources. Specify --with-res-name=rxvt to replace rxvt.
 
-    --with-res-class=CLASS /default: URxvt)
+    --with-res-class=CLASS (default: URxvt)
         Use the given class as default application class when reading
         resources. Specify --with-res-class=Rxvt to replace rxvt.
 
@@ -143,10 +143,6 @@ CONFIGURE OPTIONS
         Add support for a very unobtrusive, plain-looking scrollbar that is
         the favourite of the rxvt-unicode author, having used it for many
         years.
-
-    --enable-ttygid (default: off)
-        Change tty device setting to group "tty" - only use this if your
-        system uses this type of security.
 
     --disable-backspace-key
         Removes any handling of the backspace key by us - let the X server
@@ -229,6 +225,9 @@ CONFIGURE OPTIONS
         Add smart growth/shrink behaviour when resizing. This should keep
         the window corner which is closest to a corner of the screen in a
         fixed position.
+
+    --enable-text-blink (default: on)
+        Add support for blinking text.
 
     --enable-pointer-blank (default: on)
         Add support to have the pointer disappear when typing or inactive.
